--- a/client/src/sass/Home.scss
+++ b/client/src/sass/Home.scss
@@ -3,11 +3,11 @@
 body{
     padding: 0;
     margin: 0;
-    height: 100vh;
+    // height: 100vh;
     // background-color: fff;
     background-image: url('../img/Background.png');
     background-repeat: no-repeat;
-    background-position: center;
+    // background-position: center;
     background-size: cover;
     background-color: $background;
     // display: flex;
