--- a/client/src/sass/variables.scss
+++ b/client/src/sass/variables.scss
@@ -1,6 +1,8 @@
 $background: #000;
+$backgroundWhite: #fff;
+
 $morado: #6B63B5;
-$Gradiente: linear-gradient(135deg, #FF0000 0%, #FED482 100%);
+$GradienteGriffindor: linear-gradient(135deg, #FF0000 0%, #FED482 100%);
 //background: linear-gradient(135deg, #FF0000 0%, #FED482 100%);
 
 // Heading Font
