[UPDATE]Se crearon los estilos de las tarjetas y la primer vista de todos los estudiantes

--- a/client/src/sass/variables.scss
+++ b/client/src/sass/variables.scss
@@ -2,12 +2,20 @@ $background: #000;
 $backgroundWhite: #fff;
 
 $morado: #6B63B5;
+
+
+//CasasHowarts
 $GradienteGriffindor: linear-gradient(135deg, #FF0000 0%, #FED482 100%);
-//background: linear-gradient(135deg, #FF0000 0%, #FED482 100%);
+
 
 // Heading Font
 $HeadingFontColor: #081F32;
 $fontColorTitle: #fff;
+
+//Buttons
+$normalButton: rgb(0, 0, 0, 0.6);
+$hoverButton: rgb(107, 99, 181, 0.6);
+$activeButton: #6B63B5;
 
 
 //Second Font
