--- a/client/src/sass/Home.scss
+++ b/client/src/sass/Home.scss
@@ -3,14 +3,10 @@
 body{
     padding: 0;
     margin: 0;
-    // height: 100vh;
-    // background-color: fff;
     background-image: url('../img/Background.png');
     background-repeat: no-repeat;
-    // background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-color: $background;
-    // display: flex;
 }
 .principal{
     display: flex;
