[Update] Se agregaron rutas y funcionalidad a los elementos para que renderice las tarjetas de Estudiantes y Staff

--- a/client/src/sass/Buttons.scss
+++ b/client/src/sass/Buttons.scss
@@ -28,6 +28,10 @@
     background: $hoverButton
 }
 
+.buttonFilter:active{
+    background:$activeButton;
+}
+
 
 
 @media (max-width: $breakpoint-xs){
