--- a/client/src/sass/variables.scss
+++ b/client/src/sass/variables.scss
@@ -6,6 +6,9 @@ $morado: #6B63B5;
 
 //CasasHowarts
 $GradienteGriffindor: linear-gradient(135deg, #FF0000 0%, #FED482 100%);
+$GradienteSlitherin: linear-gradient(135deg, #1C792B 0%, #82E95E 100%);
+$GradienteRavenclaw: linear-gradient(135deg, #0597B7 0%, #66D1FF 100%);
+$GradienteHuffelpuff: linear-gradient(135deg, #FFC700 0%, #FFF388 100%);
 
 
 // Heading Font
